Make fullscreen entry invisible, because of... issues.

--- a/src/lightening/client/ui/LighteningUi.scss
+++ b/src/lightening/client/ui/LighteningUi.scss
@@ -3,12 +3,4 @@
     width: 100%;
     height: 100%;
   }
-
-  > button {
-    display: block;
-    padding: 20px;
-    font-weight: bold;
-    font-size: 20px;
-    margin: 20px auto;
-  }
 }
